--- a/praktikum/pertemuan5/P5_PW_193040092/latihan5c/asset/css/style.css
+++ b/praktikum/pertemuan5/P5_PW_193040092/latihan5c/asset/css/style.css
@@ -1,4 +1,15 @@
 p, a{
   font-family: arial;
   color: salmon;
+  text-decoration: 
+}
+
+body{
+	background-color: #2F4F4F;
+}
+
+h1{
+	text-align: center;
+	color: azure;
+	font-family: arial;
 }
