--- a/praktikum/pertemuan5/P5_PW_193040092/latihan5c/asset/css/style.css
+++ b/praktikum/pertemuan5/P5_PW_193040092/latihan5c/asset/css/style.css
@@ -13,3 +13,12 @@ h1{
 	color: azure;
 	font-family: arial;
 }
+
+.container{
+	width: 500px;
+	/*height: 500px;*/
+	border: 2px solid black;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
