--- a/praktikum/pertemuan5/P5_PW_193040092/latihan5c/asset/css/style.css
+++ b/praktikum/pertemuan5/P5_PW_193040092/latihan5c/asset/css/style.css
@@ -16,9 +16,19 @@ h1{
 
 .container{
 	width: 500px;
-	/*height: 500px;*/
 	border: 2px solid black;
   padding: 10px;
   margin-left: auto;
   margin-right: auto;
 }
+
+.gambar{
+	width: 300px;
+	height: 300px;
+}
+
+img{
+	width: 300px;
+	height: 300px;
+}
+
