--- a/praktikum/pertemuan6/P6_PW_193040092/latihan6a/asset/css/style.css
+++ b/praktikum/pertemuan6/P6_PW_193040092/latihan6a/asset/css/style.css
@@ -15,10 +15,16 @@ h1{
 }
 
 .container{
-	width: 500px;
-	/*height: 500px;*/
-	border: 2px solid black;
+  width: 500px;
+  border: 2px solid black;
   padding: 10px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.gambar img{
+	width: 300px;
+	height: 200px;
+  margin-left: 110px;
+  border-radius: 25px;
 }
